# memanto

./: pyproject.toml
examples/benchmarks/memanto_vs_mem0/: .env.example  README.md  benchmark.py  requirements.txt
examples/crewai-memory/: README.md  crew.py  requirements.txt  run_contradiction.py  run_full_pipeline.py  run_research.py  run_writer.py
examples/langgraph-memanto/: .env.example  README.md  memanto_store.py
examples/langgraph-memanto-pr453/: README.md  agent.py  demo.py  memanto_langchain_tools.py  requirements.txt
examples/langgraph-memanto/basic_integration/: agent.py  demo.py
examples/langgraph-memanto/core/: memanto_tools.py
examples/langgraph-memanto/cross_session_recall/: graph.py  main.py
examples/langgraph-memanto/custom_memory_saver/: agent.py  langgraph_agent.py  memanto_memory.py  run_demo.py
examples/langgraph-memanto/research_pipeline/: run_full_pipeline.py  run_research.py  run_writer.py  validate_offline.py
examples/langgraph-memanto/research_pipeline/langgraph_memanto/: __init__.py  graph.py  nodes.py  state.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/crewai_memanto/: __init__.py  tools.py
integrations/langgraph/langgraph_memanto/: __init__.py  tools.py
memanto/app/: config.py  main.py
memanto/app/clients/: backend.py  moorcheh.py  onprem.py
memanto/app/routes/: auth_deps.py  health.py  memory.py  sessions.py
memanto/app/services/: agent_service.py  daily_summary_service.py  session_service.py
memanto/app/ui/routes/: ui_router.py
memanto/app/ui/static/: index.html
memanto/cli/client/: sdk_client.py
memanto/cli/commands/: _shared.py  config_cmd.py  core.py  memory.py
memanto/cli/config/: manager.py
memanto/cli/connect/: engine.py  templates.py
memanto/cli/ui/: display.py
tests/: conftest.py  test_api.py  test_backend.py  test_cli.py  test_unit.py
